Opdr7 | Bootstrap - Update

--- a/Bootstrap/opdr7.html
+++ b/Bootstrap/opdr7.html
@@ -28,7 +28,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Action</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
+                      <!-- <li><hr class="dropdown-divider"></li> -->
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
@@ -60,6 +60,92 @@
                 </div>
                 <p class="col-12 col-md-6 order-2 order-md-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, placeat rem? Distinctio cum ipsum eligendi vel obcaecati quidem accusantium cumque provident eos veritatis quae repudiandae quod exercitationem expedita aliquam molestias ea accusamus voluptates aperiam tenetur nulla delectus, adipisci tempore. Id vel laudantium incidunt eum. Sunt cupiditate vel esse! Asperiores nulla omnis velit quisquam laudantium iste, tempora veritatis, eligendi unde, deleniti harum illum quibusdam explicabo fugit quidem reprehenderit vitae. Obcaecati, magni. Ut cum eos sit quam ipsum eius! A nobis aperiam animi dignissimos porro, reprehenderit voluptates temporibus aspernatur mollitia id maiores modi? Ex atque consectetur, optio necessitatibus earum quia laboriosam assumenda consequatur accusamus quas exercitationem dolor, ipsum animi nemo dolores sequi, architecto voluptates hic corrupti libero. Dolor doloremque molestiae eius. Praesentium harum soluta dolor velit magni. Unde officiis repellat dolore ullam expedita possimus est facere fugit illum! Temporibus, soluta, fuga at nihil vel placeat consequatur, amet sapiente odit quidem voluptate aliquam.</p>
             </article>
+
+            <div class="row row-cols-1 row-cols-md-3">
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+              
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+
+              <div class="col mb-4">
+                <div class="card position-relative">
+                  <span class="badge badge-secondary mt-3 ml-3 position-absolute">Techgrounds</span>
+                  <img src="./res/img/16sucai_201408200929.jpg" alt="Tech BG for card" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Real Coders</h5>
+                    <small class="text-muted font-italic">30 minutes</small>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis autem doloribus deserunt fugiat quia perferendis, in ipsa sequi ad dolores voluptate! Excepturi ipsa ullam distinctio!</p>
+                    <a href="#" class="btn btn-primary">Read tutorial</a>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between"><small class="text-muted">Sept 1 2020</small><small class="text-muted">113 Views 12 Likes</small></div>
+                </div>
+              </div>
+            </div>
         </div>
 
     </main>
