JS - day 2 - Update

--- a/Bootstrap/eindopdracht/contact.html
+++ b/Bootstrap/eindopdracht/contact.html
@@ -27,7 +27,7 @@
                 </li>
               </ul>
             </div>
-            <img class="img-fluid" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
+            <img class="img-fluid d-none d-lg-block" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
           </nav>
     </header>
     <main class="bg-secondary">
