--- a/Bootstrap/eindopdracht/overview.html
+++ b/Bootstrap/eindopdracht/overview.html
@@ -27,7 +27,7 @@
                 </li>
               </ul>
             </div>
-            <img class="img-fluid" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
+            <img class="img-fluid d-none d-lg-block" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
           </nav>
     </header>
     <main class="bg-secondary vh-100">
@@ -40,9 +40,10 @@
         </div>
         <h1 class="text-center text-light">SuperStore</h1>        
         <div class="container">
-            <div class="row m-0">
+            <!-- <div class="row m-0 card-group"> -->
+                <div class="d-flex justify-content-around justify-content-lg-around">
 
-                <div class="col-12 col-md-4">
+                <!-- <div class="col"> -->
                     <div class="card">
                         <img class="card-img-top" src="./res/img/ilove-ny-front.jpg" alt="I love NYC shirt front">
                         <div class="card-body">
@@ -53,9 +54,9 @@
                             <a href="./product-ny.html" class="btn btn-primary">Go to product page</a>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
                 
-                <div class="col-12 col-md-4">
+                <!-- <div class="col"> -->
                     <div class="card">
                         <img class="card-img-top" src="./res/img/ilove-jp-front.jpg" alt="I love Japan shirt front">
                         <div class="card-body">
@@ -66,9 +67,9 @@
                             <a href="./product-jp.html" class="btn btn-primary">Go to product page</a>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
                 
-                <div class="col-12 col-md-4">
+                <!-- <div class="col"> -->
                     <div class="card">
                         <img class="card-img-top" src="./res/img/ilove-rd-front.webp" alt="I love Rotterdam shirt front">
                         <div class="card-body">
@@ -79,7 +80,7 @@
                             <a href="./product-rd.html" class="btn btn-primary">Go to product page</a>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </main>
