--- a/Bootstrap/eindopdracht/index.html
+++ b/Bootstrap/eindopdracht/index.html
@@ -28,7 +28,7 @@
                     </li>
                   </ul>
                 </div>
-                <img class="img-fluid" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
+                <img class="img-fluid d-none d-lg-block" src="../../resources/img/tg-logo.png" alt="techgrounds logo">
               </nav>
         </header>
         <main class="justify-content-center bg-secondary">
