JS Module 1 Compl - Update

--- a/JavaScript/datatypes/index.html
+++ b/JavaScript/datatypes/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro - JavaScript (Week 5)</title>
+    <title>Datatypes - Intro JavaScript (Week 5)</title>
     <!-- <link rel="stylesheet" href="../../resources/css/main.css"> -->
 </head>
 <body>
-    <h1>Introduction to JavaScript!</h1>
+    <h1>Introduction to JavaScript - Datatypes</h1>
     <section>
         <h2>Datatypes</h2>
         <h3>Undefined en getallen</h3>
@@ -335,6 +335,7 @@
         </div>
 
     </section>
+    
     <!-- ​hier kun je de antwoorden van de vragen plaatsen.  -->
     <script>
         /*** ***/
@@ -425,7 +426,6 @@
         sum = ++number +2;
         console.log(`Opdracht 9 (++number +2): sum = ${sum}`);
 
-
         // Opdracht 10
         console.log('\n')
         number = 3;
@@ -490,5 +490,6 @@
         console.log(`substr(2) uit ${stringA} wordt ${stringA.substr(2)}`);
 
     </script>
+
 </body>
 </html>
