JS | Log_cond |translateMonth | Update

--- a/JavaScript/datatypes/index.html
+++ b/JavaScript/datatypes/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="../../resources/css/main.css"> -->
 </head>
 <body>
-    <h1>Introduction to JavaScript - Datatypes</h1>
+    <h1>Introduction to JavaScript</h1>
     <section>
         <h2>Datatypes</h2>
         <h3>Undefined en getallen</h3>
