Update REAL QUICK

--- a/JavaScript/functions/index.html
+++ b/JavaScript/functions/index.html
@@ -121,13 +121,13 @@
         }
 
         // Opdracht 6
-        const name_check = (entered_name)=>{
+        /**const name_check = (entered_name)=>{
             if (entered_name == "John"|| entered_name == "Olly"|| entered_name == "Mo"|| entered_name == "Hendrik"|| entered_name == "Tony") {
                 return succes(entered_name);                
             } else {
                 return fail();               
             }
-        }
+        }*/
 
         // Opdracht 7
         
