JS | GuessTheWord, Functions - Update

--- a/JavaScript/functions/index.html
+++ b/JavaScript/functions/index.html
@@ -104,7 +104,7 @@
                     _name = "John";
                     break;
                 case 2:
-                    _name = "Oly";
+                    _name = "Olly";
                     break;
                 case 3:
                     _name = "Mo";
@@ -173,7 +173,6 @@
             return full_string;
 
         }
-
 
     </script>
 </body>
