Arrays&Functions | JS - Update

--- a/JavaScript/functions/rapport.html
+++ b/JavaScript/functions/rapport.html
@@ -62,27 +62,27 @@
                 <tbody id="wiskunde">
                     <tr>
                         <td>Willem</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">3</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">3</td>
                     </tr>
                     <tr>
                         <td>Jan</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">7</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">7</td>
                     </tr>
                     <tr>
                         <td>Kim Sing</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">10</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">10</td>
                     </tr>
                     <tr>
                         <td>Samantha</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">4</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">4</td>
                     </tr>
                     <tr>
                         <td>Joyce</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">6.5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">6.5</td>
                     </tr>
                     <tr>
                         <td>Gareth</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">1</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">1</td>
                     </tr>
                 </tbody>
             </table>
@@ -99,27 +99,27 @@
                 <tbody id="nederlands">
                     <tr>
                         <td>Willem</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">7</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">7</td>
                     </tr>
                     <tr>
                         <td>Jan</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">7</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">7</td>
                     </tr>
                     <tr>
                         <td>Kim Sing</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">4</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">4</td>
                     </tr>
                     <tr>
                         <td>Samantha</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">8</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">8</td>
                     </tr>
                     <tr>
                         <td>Joyce</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">8.5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">8.5</td>
                     </tr>
                     <tr>
                         <td>Gareth</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">4</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">4</td>
                     </tr>
                 </tbody>
             </table>
@@ -136,27 +136,27 @@
                 <tbody id="natuurkunde">
                     <tr>
                         <td>Willem</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">7</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">7</td>
                     </tr>
                     <tr>
                         <td>Jan</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">5</td>
                     </tr>
                     <tr>
                         <td>Kim Sing</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">8</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">8</td>
                     </tr>
                     <tr>
                         <td>Samantha</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">6</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">6</td>
                     </tr>
                     <tr>
                         <td>Joyce</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">9</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">9</td>
                     </tr>
                     <tr>
                         <td>Gareth</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">5.5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">5.5</td>
                     </tr>
                 </tbody>
             </table>
@@ -173,27 +173,27 @@
                 <tbody id="engels">
                     <tr>
                         <td>Willem</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">6</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">6</td>
                     </tr>
                     <tr>
                         <td>Jan</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">6</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">6</td>
                     </tr>
                     <tr>
                         <td>Kim Sing</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">5.5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">5.5</td>
                     </tr>
                     <tr>
                         <td>Samantha</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">4.3</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">4.3</td>
                     </tr>
                     <tr>
                         <td>Joyce</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">5.5</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">5.5</td>
                     </tr>
                     <tr>
                         <td>Gareth</td>
-                        <td class="grade" contenteditable="true" onchange="formatCheck()">8</td>
+                        <td class="grade" contenteditable="true" onchange="formatCheck(this)">8</td>
                     </tr>
                 </tbody>
             </table>
