Arrays | JS - Update

--- a/JavaScript/arrays/index.html
+++ b/JavaScript/arrays/index.html
@@ -19,7 +19,7 @@
         // 2. Toevoegen van producten in de array
         products = ["Schoenen", "Sjaal", "Handschoenen", "Muts"];
         // 3. Een waarde benaderen in de array.​
-        console.log(products[0]);
+        // console.log(products[0]);
 
     </script>
     <script src="./js/script.js"></script>
